1. Wrapped _mediaHeader partial with an if $page->admin so that it doesn't output the header to logged-out public media repositories. I did this because there are no interface elements that are useful to logged-out viewers available and it was just "extra stuff" on the page. 2. Updated the clearfix to use the one that is in HTML5 Boilerplate because it's lighter and less obtrusive. We were running into issues previously where the clearfix was conflicting with display:none on certain elements that needed to be hidden until they are needed and ALSO clearfix'd. 3. Fixed Media Layout, we lost a float last week causing the div.a-content to wrap down, which made media feel really busted
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/1.5@3050 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a-engines.css
+++ b/web/css/a-engines.css
@@ -257,7 +257,7 @@ width: 104px
 /* Media Engine Layout
 -------------------------------------*/
 .a-media .a-subnav-wrapper { margin-right: 20px; }
-.a-media .a-content { width: 720px;}
+.a-media .a-content { width: 720px; float: left; clear: none; }
 
 .a-media-library,
 .a-media-selection,
@@ -450,7 +450,7 @@ border-radius: 4px;
 /* Media Select -- Adding Media, Selecting Media
 -------------------------------------*/
 
-.a-media-add { display: none; clear: both; }
+.a-ui.a-media-add { display: none; clear: both; }
 
 .a-ui.a-media-select
 {
